--- a/GenericTSQLCollector/CollectionSetManager/Manager.resx
+++ b/GenericTSQLCollector/CollectionSetManager/Manager.resx
@@ -118,6 +118,101 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAZsAAABHCAIAAABecX1PAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAadEVYdFNvZnR3YXJlAFBhaW50Lk5FVCB2My41LjEwMPRy
+        oQAAFL5JREFUeF7tnXlsXNd1xl8ax9laU6nbeItjOksTIDEoOChiNC2GdZV0QZE0KbqgTkL/UbhNgKJy
+        GhRF01YCWsSJs9h1KslaKVGWRFsbKYraLUqUYkdWtMSOK0MkRYqLKK6zkJQ4M+Sw353zdHR03zLDmREr
+        js/FD8TMeefed+69537vvlk4zi//9y1FUZTyQBVNUZTyQRVNUZTyQRVNUZTyQRVNUZTyQRVNUZTyQRVN
+        UZTyYe4Urbqhx1l2HlTWdVqHFEVRSsIcKdrjLQPO8+2gYt0FZ0X7gnUdloOiKErxzJGiOasugM5EamZm
+        pqZl0FnZsaBWd2qKopSYuVK0NZ0Ackal5siQs9ponOWmKIpSDHOlaOsuAlfPsqXm6JCzpstZrTs1RVFK
+        xlwp2voe4IrZtbLkdMxZe9FZ22U5K4qiFMbNVbTq/UNOXe81+lwlE6W2bdyp7cb2zaqoKIpSADdF0Zae
+        TSyovwQJczb2OS9c+tKRkdr2ic6xtCtjNxYjauuNqC0+MWq1oyiKMitKrGiulmWFrKp5qLZjIpqcdqUr
+        uGRFrQebtcePDVsNKoqi5E8pFa1yRz9pWeTgcMvlpCtX+ZXa9vGKLX0QtcUnolaziqIoeVIaRVv8WtS8
+        UraxD/uy2WoZlzMjKWdDL+5ArcYVRVHypASKtrDpMsnZkl8kXHEqtET2D0HUrPYVRVHypFhFW7jLyFnF
+        i/1nRs33AYopaAF3rFBG6xSKoih5UpSiVW67hC1V1e7BfF7+Dy+1F646Wy47m/sX/zxunUVRFCVPCle0
+        hY39zoaeqt0DJZCzzknnpSHnxcHHf6ZypihK4RSoaNV7Bpz1PVVNJZCz9Rcnne0jzrbhpW9OWGdRFEWZ
+        FYUo2tLTMae2u2JLX9CHZq1ybDj9vbarj50ad5+LUtedvK1h9B079LO1iqKUgEIUzXztfH13S/+kK0sB
+        pXU4/Y1fTFQejN25N/Yb+wzugWvln9+88t6m6O2N1z+AVtk86tQPmBfUNmU/prvBfOzWWdvlrLqg/31I
+        UZSczFrRKut7oWhLzsRdWfIrG7uTnzocX7An9utZLftMa+KuA/G7D9xQ5ZuvT9zRHP3V3dflzNx7bh2u
+        2DkUeXk0cmgkcmA4sn8wsncg0nz5gS09zsoOZ0Xb0tdG2F9RFMVidoq29FQUO6aqhn5Xljxlw8XkJw/F
+        oVMVe2ILjyS+c+4qVbzvYPy+Q9cV7R/euHLnvljlwevvAzx6PIF7z5qTY66Hp9S+lTD//HZNO1dRFEWx
+        mJ2iOas7oWhnRny+FdA5MfXoscS7G6Pva4pig2ZV/PDL8QcOx3uuTMdSmSffvHLPgfgH98ekw7saRn9l
+        52j4+wxVW7ud5edlLUVRFMksFK266RIUraZ12BUYUZ5pu/qBpuhtDaN37b1Bp4jPvTL+YEvio0cSH2lJ
+        VB5OQN2wZcN9KG5IeZt2e2MUiuY2F1Aiu/qc5W3crKIoisUsFM1Z2VFRdzE6ecM2CruqSEvM2TaCe8Zv
+        veHz8QvoF+Ts4eOJr56deOzsxN+cmfir0xN/cWr8KyfHHz6a+MDe2B3N5qU0bO7eqYqmKEpx5Kto1Y19
+        zqqOJaeirrpky5nRVMX2QWfr0IJG/49ffOHEOG42v33uilvBUzb3Ju9ojt27L2YUrUEVTVGUoshX0ZwV
+        7RXrO+UGrbZjwtl82akfqG7xudMkcHeJPVo8nXHr+JXPHUu8rymqezRFUYpnFoq25OfXFWfJ2bj5Vvnm
+        /sWnxyxPyb0H4/eLtzh9yx+/OgZFu10VTVGUoslf0dqik1OkLDXHRsw/MtvYt/T1MDkDdx8wbwJQraAC
+        RXvvrii91+maAkoEd7653uvcuGnzk9/69qJFn//0Qw+Bzz7yyGNf/dqzz/3k1RMnLc8C+O5T36dmwbYd
+        DWxnI87FxpsNAvCe7v8lkpsN5g4jj0m07Dmh2f+3f1+C6uEJgLSBD5yROXJmlXnHLBTN/f3g1mHzOf4N
+        PeYz/Zv6zef7Xxx0tg4720cgSdhqQZ7uu/bJjN/cH7M+WOstf/TK2Lt3mfdJ37EjD0VbFqhozXv2ISN5
+        SVsguYvP1FtE0V5uOQrVpjNah+Y4kjlg1Zq1dH3C4FuHcsKjAdCOdVSC9GBPVbR5Td6KtrzNeb7d/DT6
+        mq7st6B6nLq+ipcum8/3H45GjsQiR+PVrYk/OJ74rYPx9zdF6R3MO/fFIGquIAWUL/x0jG45oYmuKaBE
+        GnuDFA1yJpMyCFyKrYqz4hZRNCnc1iG2l4eiYZC5RwUrGgniE3/399ZRBlkBB84fVbR5Tb6KVt3QQ4pW
+        Wd+z4AXz45s1xwO3VBu7k+/fHb3/QIy+COVaA8rnj4/RBs3ZlkvRGvwVDTcU+cgZgFsxt5+3vqKVGSVR
+        NNx10gPrKEMbXt72qqLNa/JVNIn56nhtd/jn+z97NIGd2q/tjlY051A0bOtwu0pf6nRNASUCVfVTNM5F
+        AldjbNnoEB5YRwtYGIwq2hxTEkVDRaQEHgTt0OlySDs1oIo2rylI0bI3nq7MBJRFx8fes8t8IwqbNdcU
+        UH7/WMLZYf4/mvPSkGsKKJGdPoqGPRclIuH7+rFUItyDWEfRAmpJmcBj35ddClA0uGE58RYyqGWCXiCT
+        b2ugrvSXAUj4vF4LU1g38VR2AbEhQt99LppCg9xTgKfYH6FTlidACzjLF7/0Z+RJzVqe3I5F/opD/jgR
+        YsMDnMJyALjm4RA6iGbJ32qfx4275p0XIKujTR4x/PV2jYAR4yNnhMbBt4MyN7hNninLOZ/hBXQUp0MH
+        KVp4+qbEPKIgRct+u9OVmYDy6LHEuxrMGwXQNdcUUCKtCSNnW83/sHVNAcVX0ShZCUyhdZTBIcpCa16R
+        fJQlXmDnvR4hl7pMOzYiO9kI+H7HAm5eUZAdsWB/GYCEz+u1EAV307cLyH4ZPx7z4vECZ6v9oGDgKZeT
+        dZTxXfC+kD+6g0nHA7RvOQDqIJY0miV/2X7IuAHIBHtydRjZgfEOAnoKo+XGyHEAqOt1hgUpTY9zOgMY
+        rWbJbgVsxTnvKEjRsu8PuDITUKpbzb3kO3eO3pbzmwBH4iRnzpYB1xRQfBVNLjnkpXU0nKC5Z3BUKuCs
+        FA3BsN2LpTh8yxMEugm3whStmG4GQfHk6Y/2WQHxIEQjAA+sZWfkyIdD/ggPj0lzvTeeFAy6z5Ik26da
+        iF9WxGPuAq9/rg5Qi/zRWR4cqA95ApyOZgSe3AKcea+Ev+zMI8ZhyGYJdpYtc8yIDflAnlKwyELOlACW
+        5M1HClK0lR3YprkyE1AiR+PmpbEd5vuerimgmK+FZuXM2XzZNQUUX0XjqQL55zoh6yLhaFLxly99QEqD
+        TCN5LjayM3KOEgvgATmjZXk9lNnDzoB12dJECg/IsMnCsF2GXUw3AWJGd4AMHmuA/Tl4NMJB4gGewg2t
+        yVUkG6eWYcTa40awetlZygQqsj1PZEUaTJxROiAwGKkvfC6eWToqLQwCpkM8WVwdHaFOMTxubKFgvJ6A
+        r9A8aJwGchilHbCRzoUx9LZMaSAnmqvzrJUBBSla9k1PV2YCitEp7LxwO5nzHczDUfoVKOeFS64poJRW
+        0ThfgZxmQjbLmSRXozwXG7kdmW1WVHx554s2pI2drXWL/EabMMpslrGxkWA7R1JkN60qbAdeI/coBCl/
+        0i4HgSNhmQDWyOSDrEjjgLNLB5IPUiU+Vz5ZxM4cFVvk7pXgZLDsvvDgcxgQXDy1tJjgXKKnUDF6yrsz
+        CUfI+kVP5cWpDChI0Va0Y5vmykxAMTqFnddLINfr/YdGzSd1s7/U6ZoCSmkVTa5bbwbwRRhw1soq8lxs
+        5FUqtz/sRshGyMKXZSCVKwjZZesQ2zmSIrtJq53xPTWvKwDJwNqDPPl2hGSF4NMx3kO8CKUxf6yKFKcc
+        BLJQqHyuoCyCXuAQuoYOcpe9ocqtt3XIsjOQGPhgqJE2rPgUBouUt1lg7f54Nr0bNIKOclP0NJ/r0Dyi
+        IEVb3gZRc2UmoEQOjZidV/0AcE0BJXJw2MhZXZ+zodc1BZTSKlqILhB81Fcd5LnYyJ6y8RDoapkzEosQ
+        f7b7RsJuEj7KVYK6CXxbkxtSCambbAGPLR9feD8i/YtXNLpycOMkr9AmesrnsrqMp1JoLLyKZlUPOQRl
+        keNpQc4hzQKeKetpOByz9bQ8KEjRlp2HqLkyE1CMTmHnhXvJnK+OHRhy6nrpR1JcU0DxVTS+TIXPDVIH
+        eYm1x3uHEi51NrJnSKZKqJGckViE+LPdNxJ2k/BRrhLUTRDUGgY2aM0DvhHj9RkORyL9C1h4VkVLwkjg
+        vLHJLkN0yEigj4gNnWU7N+5bPeSQzFuAqJCfaJY37OQc0izgmbKehsMxW0/Lg0IVbdl5V2YCSmT/kPni
+        JzZfOV8d2zdovlNV253zM26+iiY3CEGvCGArxD6AjCVc6mxkT9l4CNRIzkgsQvzZ7hsJu0n4KFcJ6iYI
+        aQ13OliQQdsZHIIPr89wOBLpX8DC81ak2OiqJm85AZ+Lu8xpg7zCDZ28lWNnbtxbnfEeYkHEcFn+PPhk
+        99aVsLPv05yQsxyfMuCmKRp0CtsubL7qct1L7h0wXxRd2+WsyfX+qZ+iWWoFgbMcgFyHyCEy8vSDAl5g
+        khnGRl6KISvfC1+WgW/iWoQ0znaOpITdBHn2CzKBiZDOdK/H6xPw6UKYrb+FtyLtjDDg1n4N8Lm4yzQv
+        EEHvy1LszI17qzPeQ/RiP8+RhAefnAt7HY1ezcgJORcwsLcyN03R9gyYbRdY3+OaAkqk+bL5EsLqztzv
+        n/opGrA28NAsvvBijuW6ApxVnGfAm1uyFrfG2Qa4HcBGbkfuHKWnL3zFBrTy5SFkP5aWFCMZGxsJtnMk
+        JewmCDm1F16NgE/NOzhvMF5k8AUsPG9FWvMQMlIrOdp8Lu4yddY3Th4ibtxbnfEeoqe+PeIRZmeSPysx
+        CNpmAnrKV/c8x2pWzvOFm6Zozf1m27X2Yu57yd395iO7Kzuc53O9fxqgaFg5vnc6XqzspFwhoIN0ZcNf
+        PGa7rMJ5DGTispGd5c4RsbEe4QG/YiIvpDJ+qCFtCuAs7XyV5qQHJEMsRmyXYZeqm0Cemo3wgUDgLGiQ
+        I0H78krDe2dpxGMOBo9Ju+UZ8Zid0Th5endMQVBFa8WSkbRAXif4XBwAhSr3cQT6yPPCjXurM95DdHa0
+        zz6EvLaxM18deWwtO2AjTRDCs5yBNwx6qormKhr/A0jfUrW912y7wJob/pe3t1Rt64GWmc+4Lb/+TyV9
+        S1V9l6+iAZlkQcDBWgw5a1lV8lc0IJ19kc60dwgBq52daX8h4aa8FlCqbgJaMARZeJ2EINvHg/BgAJ8U
+        ztYhYIUUAvlbK5Z1HGFIO3eE22d94csA4oGOyPi5cW91xnuIZR3VaWTQvjWt7AwHUkCclySYwpDO5Al4
+        rvEX8XPjOBHZZWJQXWt85juFKJr5z0LLztccCvwd4tq34lCoBbWd5gfxVl2oaQn8wqbxXNG+YG1H7jbP
+        xeEQ8gvEmEu5GbHAIUpKC9SidPGCKjgqnTH3fFQmLhtlugBOXC/wpGxj5PXZAhHKSHiFMKx3bLEiKUk3
+        gVfRQEjkAAvJah9PaXV5oXUoneUZCbmxCof8rRXL0VpbJB5V2WXfGaQgaTxp5xhUPegQpt43V9EmX9t4
+        Vwt8RwwWVmf2BDhL0PBaWUdGVTQDxCUH134QwGy+vKwAbeZzbeDatuuG6gGQZwhINUwzr16adWuRWGCO
+        4SBXDh77VpmtogG4IQDOsPB4oLlYQjJ4NIjMtrQPIO95ScCfFydZgDeS4rsJZHVpp10Ajsq1hKcweoMH
+        MOKQXNV4jE2K96oDT/SOm0WbVkghUBWcSBrRINmtvqNZslvtyzgx1Bwk7LAgMOpgUPWgQ9Qvnmucgiea
+        Bhl/2RnI3MBJ8ZjGnOpKT4B2ECeHDX/frKOj1vjMdwpUNFBZ12nJDWPtpCo3drni5RLsmXebivI2gXQH
+        CmXZAXQNhyzte5tTuKIpijIH0JYNuzPLjo0YbV3l/amiiqYotzT8JgDuHPmunF924NtehVBFU5RbHbq7
+        9AI5s951UVTRFGUesCr7lhdrGTZo3831I6RvT1TRFEUpH1TRFEUpH1TRFEUpH1TRFEUpH1TRFEUpH1TR
+        FEUpH1TRFEUpH1TRFEUpH1TRFEUpH1TRFEUpHxz3HyrmXSaTafdRQIFDSUlNTiYnr141XLkyOTE+OZGY
+        HI9PjkUnEyOT8eFkfDAZG0iO9hlGepLDF5ODHcnB9uRAW7L/XPLSm8m+N5K9rye7TyUvnkx1vZbqfCV1
+        4XiqvTXVdiR1/lDqrf2pc/tS5/akftmYemNn6vXt6bP16TNb0qdfSJ+qS59clz6xOv2zlelXV6R/+lz6
+        +LPp1h+ljz491fLU1OH/mnr5P6cO/sfUge9M7f/XqX3/MtX8T1O7n5xq+sepxm9ONXxjeucT0zv+dnrb
+        49Nbvz794mPT9X89veUvpzf9+fSmL09v/OJ03Z9Ob/iT6fV/mFm3KLP20cya6syq38us+t3Myt/JPP9I
+        ZvlvZ5Z9JrPs4cz/LMz85KHMc5/O/PenMs9+MvPMJ2ae+fjMjz8286OPzPzwwZkfVs784IGZH9w/8/SH
+        Zp6+b+b79xq+d0+Wu2eeuivLB3NBbllQ6zrUzj1uswTOYsDpPmTOa/hwNoYHTDAGRPWgCc/wUcOPwcey
+        ZJ8askfJk2pRC6apbJvUPp1Lnp1DknHK+O2ueeFuiq5Rj8ypqRfZ+BHwMx/HgJthx+BjCjARmA5MCqYG
+        E4RpwmRhyjBxmD5M4rpFmFAzrZhcTDEmGtONScfUIwGQBkgGpMTOJ5AeJkmQKkgYpA2SBymEREI6IamQ
+        Wi1PIc1MsiHlkHhIPyQhUhEJibREciJFz9YjXU3SInWRwEhjJDNSGomN9EaSI9W7XkPam+THEsBCwHLA
+        osDSwALBMsFiwZKhtYNFFB/EgjLLCosLSwwLDcsNi45WH5YhFqO9PIvClYySFlU0VTRy46XOUDuqaKpo
+        qmilRBVNFe0aHJKMU8Zvd80Ld1N0jXpkTq2KNs8VbWbm/wDBAiv0P1oR7wAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAMDAAAAEAIACoJQAAFgAAACgAAAAwAAAAYAAAAAEAIAAAAAAAACQAABMLAAATCwAAAAAAAAAA
